--- a/index.html
+++ b/index.html
@@ -302,28 +302,30 @@
             min-height: 220px;
             flex-grow: 1;
         }
-        .graph-overlay-image {
+        /* --- UPDATED ANIMAL OVERLAY STYLES --- */
+        .graph-overlay-wrapper {
             position: absolute;
-            top: 65px;
-            left: 80%; 
-            transform: translateX(-50%); 
-            width: 80px;
-            height: auto;
+            top: 55%;
+            left: 80%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 4px; /* Liten avstand mellom bilde og tekst */
             pointer-events: none;
             z-index: 2;
+            width: 140px; /* Bredden på hele overleggs-elementet */
+        }
+        .graph-overlay-image {
+            width: 100%; /* Bildet fyller wrapper-bredden */
+            height: auto;
         }
         .graph-overlay-text {
-            position: absolute;
-            bottom: 20px;
-            left: 80%;
-            transform: translateX(-50%);
-            width: 100px; 
+            width: 100%;
             font-size: 12px;
             color: var(--dark-gray);
             text-align: center;
-            pointer-events: none;
-            z-index: 2;
-            line-height: 1.2;
+            line-height: 1.3;
         }
         #donut-container {
             display: flex;
@@ -607,8 +609,10 @@
                     <div class="graph-container">
                         <h3>Hip Thrusters Pull</h3>
                         <div id="p2-chart-hipthrust" class="js-plotly-plot"></div>
-                        <img id="overlay-image-hipthrust" src="" class="graph-overlay-image" alt="Animal">
-                        <div id="overlay-text-hipthrust" class="graph-overlay-text"></div>
+                        <div class="graph-overlay-wrapper">
+                            <img id="overlay-image-hipthrust" src="" class="graph-overlay-image" alt="Animal">
+                            <div id="overlay-text-hipthrust" class="graph-overlay-text"></div>
+                        </div>
                     </div>
                 </div>
 
@@ -648,8 +652,10 @@
                     <div class="graph-container">
                         <h3>Static Squat Pull</h3>
                         <div id="p2-chart-squat" class="js-plotly-plot"></div>
-                        <img id="overlay-image-squat" src="" class="graph-overlay-image" alt="Animal">
-                        <div id="overlay-text-squat" class="graph-overlay-text"></div>
+                        <div class="graph-overlay-wrapper">
+                            <img id="overlay-image-squat" src="" class="graph-overlay-image" alt="Animal">
+                            <div id="overlay-text-squat" class="graph-overlay-text"></div>
+                        </div>
                     </div>
                 </div>
                 
@@ -911,8 +917,8 @@
         const saveData = () => {
              clearTimeout(saveTimeout);
              saveTimeout = setTimeout(() => {
-                const data = collectDataFromForm();
-                localStorage.setItem('fysiosportData', JSON.stringify(data));
+                 const data = collectDataFromForm();
+                 localStorage.setItem('fysiosportData', JSON.stringify(data));
              }, 500); // Debounce time in ms
         };
 
